2002-02-25  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c: Switch to R-1.4.0 sources.  Deal with signature
	changes everywhere.

2002-02-25  Morten Welinder  <terra@diku.dk>

	* configure.in: Test if we must prototype strtold.  Test for
	log1pl.

2002-02-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/sheet-object-widget.c (cb_scrollbar_set_focus) : remove code
	  now handeld in wbcg_edit_attach_guru
	(cb_checkbox_set_focus) : ditto
	(sheet_widget_scrollbar_user_config) : rearrange signal callbacks
	(sheet_widget_checkbox_user_config) : ditto
	
2002-02-25  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (random_01): Reduce the number of system calls
	and get more precision for the general gnum_float case.

	* src/mathfunc.c (random_*): use gnum_float, not double.  (Since
	many underlying functions are still double-based, not all these
	will have precision beyond double.)

	* src/solver-lp.c: Constify.  Plug a few leaks.

	* src/sheet.h (struct _Sheet): Make solver_parameters a pointer.
	Deal with this everywhere.

2002-02-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/analysis-tools.h : delete tool_set_focus
	* src/workbook-edit.c (guru_set_focus) : new, formerly tool_set_focus
	  in src/dialogs/dialog-analysis-tools.c
	(wbcg_edit_attach_guru) : attach guru_set_focus to set_focus widget

2002-02-25  Morten Welinder  <terra@diku.dk>

	* configure.in (atan2l, sinhl, coshl, tanhl, asinhl, acoshl,
	atanhl, erfl, erfcl, ynl, isnanl, finitel, hypotl): Add checks for these.
	* src/numbers.h: supply right version of above.  Use everywhere.

2002-02-25  Jon K Hellan  <hellan@acm.org>

	* src/sheet-object-image.h: Declare typedef ObjectImage.

	* src/sheet-object-image.c (struct _SheetObjectImage): Add
	cropping parameters.
	(sheet_object_image_new): Initialize cropping parameters.
	(sheet_object_image_set_crop): New function. Set cropping
	parameters.
	(soi_get_cropped_pixbuf): New function. Get the cropped image from
	pixbuf.