@@ -1,5 +1,9 @@
 2002-02-25  Morten Welinder  <terra@diku.dk>
 
+	* src/format-template.h: prototype the template member functions.
+
+2002-02-25  Morten Welinder  <terra@diku.dk>
+
 	* src/mathfunc.c: Switch to R-1.4.0 sources.  Deal with signature
 	changes everywhere.
 
